packages/parser/tests/fixtures/grammar/negative/invalid-ext.asfl
module SYSTEM_Bad;
process P ()
ext rd
FSF :
others && true
end_process
end_module
